--- a/aria2.conf
+++ b/aria2.conf
@@ -8,7 +8,8 @@ log-level=notice
 log=/root/aria2.log
 
 #上传到OG
-on-download-complete=/root/GDupload.sh
+#on-download-complete=/root/GDupload.sh
+on-download-complete=/root/aria2-one.sh
 # 文件的保存路径(可使用绝对路径或相对路径), 默认: 当前启动位置
 dir=/root/Download
 # 启用磁盘缓存, 0为禁用缓存, 需1.16以上版本, 默认:16M
